# DeepThinkingFlow-AI

./: .gitignore  README.md  genact  prepare_datasets.py  requirements-apple-backend.txt  requirements-cuda-backend.txt  requirements-train-dtf.txt  requirements-transformers.txt
.github/workflows/: verify.yml
apple_backend/: CMakeLists.txt
apple_backend/include/dtf/: apple_backend.hpp
apple_backend/src/: apple_backend.cpp  cpu_runtime_stub.cpp  metal_runtime.mm  python_bindings.mm
behavior/DeepThinkingFlow/: profile.json  promotion_policy.json  system_prompt.txt
behavior/DeepThinkingFlow/compiled/: behavior_pack.json  runtime_pack.compact.txt  system_prompt.compact.txt
behavior/DeepThinkingFlow/evals/: reasoning_following.jsonl  skill_compliance_following.jsonl
behavior/DeepThinkingFlow/training/: harmony_sft_plus_skill_compliance_balanced_vi.eval.jsonl  harmony_sft_plus_skill_compliance_balanced_vi.train.jsonl  harmony_sft_plus_skill_compliance_vi.jsonl  harmony_sft_plus_skill_compliance_vi.train.jsonl  harmony_sft_skill_compliance_vi.eval.jsonl  harmony_sft_skill_compliance_vi.jsonl  harmony_sft_skill_compliance_vi.train.jsonl  harmony_sft_vi.eval.jsonl  harmony_sft_vi.jsonl  harmony_sft_vi.train.jsonl  sft_reasoning_vi.jsonl
cuda_backend/: CMakeLists.txt
cuda_backend/include/dtf/: cuda_backend.hpp
cuda_backend/src/: cpu_runtime_stub.cpp  cuda_backend.cpp  cuda_runtime.cu  python_bindings.cpp
deepthinkingflow_apple/: __init__.py  backend.py  inference.py  mlx_adapter.py  tokenizer.py
deepthinkingflow_cuda/: __init__.py  backend.py
runtime/transformers/DeepThinkingFlow/: bootstrap-manifest.json
runtime/transformers/DeepThinkingFlow-tiny-smoke/: config.json
scripts/: accelerator_doctor.py  accelerator_readiness_report.py  aggregate_deepthinkingflow_runs.py  apple_backend_status.py  apple_mlx_adapter_status.py  apple_mlx_attention_shape_check.py  apple_mlx_dequant_range_check.py  apple_mlx_end_to_end_verify.py  apple_mlx_generation_contract_check.py  apple_mlx_inference_scaffold_status.py  apple_mlx_kv_cache_shape_check.py  apple_mlx_kv_decode_contract_check.py  apple_mlx_mlp_key_dump.py  apple_mlx_moe_forward_check.py  apple_mlx_moe_metadata_check.py  apple_mlx_weight_loader_check.py  assemble_local_transformers_model_dir.py  benchmark_deepthinkingflow_runtime.py  bootstrap_training_env.py  bootstrap_transformers_deepthinkingflow.py  build_external_training_bundle.py  build_partial_lora_config.py  build_release_manifest.py  chat_deepthinkingflow.py  check_promotion_readiness.py  compare_eval_reports.py  compile_behavior_bundle.py  compose_behavior_request.py  create_tiny_gpt_oss_smoke_model.py  cuda_backend_status.py  deepthinkingflow_cli.py  deepthinkingflow_env.py  deepthinkingflow_exit_codes.py  deepthinkingflow_json_io.py  deepthinkingflow_runtime.py  deepthinkingflow_system_check.py  doctor_deepthinkingflow.py  evaluate_reasoning_outputs.py  export_external_runtime_assets.py  export_prepared_chat_jsonl.py  (+16 more)
skills/DeepThinkingFlow/: SKILL.md
skills/DeepThinkingFlow/agents/: openai.yaml
skills/DeepThinkingFlow/references/: model-profile.md  prompt-templates.md  reasoning-patterns.md  response-examples.md  runtime-and-training.md  skill-compliance.md
tests/: test_deepthinkingflow_smoke.py
training/DeepThinkingFlow-lora/: config.example.json  config.external-local-safe.stage1.json  config.external-local-safe.stage2.json  config.external-local-safe.stage3.json  config.local-safe.focused-skill.json  config.local-safe.json  config.local-safe.stage1.json  config.local-safe.stage2.json  config.local-safe.stage3.json  config.qlora.example.json  config.tiny-smoke.json
